<resources>
    <string name="app_name">MovieHunt</string>

    <string name="failure_network_connection">No Network Connection.</string>
    <string name="failure_server_error">Server Error</string>
    <string name="failure_movies_list_unavailable">Movies Unavailable.</string>
    <string name="failure_movie_non_existent">Movie Not Existent.</string>
    <string name="action_refresh">Refresh</string>
    <string name="content_description_empty">No content description.</string>
    <string name="movie_transition_poster">moviePosterTransition</string>

    <string name="movies_screen_title">Movies</string>
    <string name="movie_details_screen_title">Movie Details</string>
    <string name="movie_details_summary">Synopsis</string>
    <string name="movie_details_cast">Actors</string>
    <string name="movie_details_director">Director</string>
    <string name="movie_details_year">Year</string>
    <string name="txt_movie_score">Score</string>
    <string name="txt_movie_reviews">Reviews</string>
    <string name="txt_movie_box_office">Box - office</string>
    <string name="lbl_director">Director</string>
    <string name="lbl_writer">Writer</string>
    <string name="action_search">Search</string>
    <string name="txt_empty_list">No items here...</string>
</resources>