<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/translucentBackground">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_fragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleGravity="top"
            app:expandedTitleMarginStart="@dimen/activity_horizontal_margin"
            app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

            <ImageView
                android:id="@+id/moviePoster"
                style="@style/MoviePoster"
                android:layout_height="@dimen/activity_banner_dimen"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax" />

            <FrameLayout
                android:id="@+id/movieTitleContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:alpha="0.8"
                    android:background="@android:color/black"
                    android:orientation="vertical"
                    android:visibility="visible">

                    <TextView
                        android:id="@+id/movieTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/view_margin"
                        android:textColor="#F1F5F8"
                        android:textSize="@dimen/title_txt_dimen"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/movieYear"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/view_margin"
                        android:textColor="#F2F5F6"
                        android:textSize="20sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </FrameLayout>
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/movieDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/view_padding_dimen"
            android:paddingTop="25dp"
            android:paddingEnd="@dimen/view_padding_dimen"
            android:paddingBottom="25dp"
            android:visibility="visible">


            <TextView
                android:id="@+id/movieGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight="3"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteY="25dp" />


            <TextView
                android:id="@+id/movieTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:layout_weight=".5"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:textStyle="bold"

                app:layout_constraintStart_toEndOf="@id/movieGenre"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginStart="4dp"
                android:background="#00ffffff"
                android:src="@android:drawable/btn_star_big_on"
                app:layout_constraintEnd_toStartOf="@id/movieRating"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/movieRating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_weight=".5"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/lbl_synopsis"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/view_margin"
                android:text="@string/movie_details_summary"
                android:textColor="@color/colorSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieGenre" />

            <TextView
                android:id="@+id/movieSummary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:lines="2"
                android:singleLine="false"
                android:textColor="@color/colorTextPrimary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_synopsis" />

            <TextView
                android:id="@+id/lbl_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="@string/txt_movie_score"
                android:textColor="@color/colorSecondary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieSummary" />


            <TextView
                android:id="@+id/lbl_boxoffice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="4dp"
                android:text="@string/txt_movie_box_office"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp"
                android:gravity="center"
                app:layout_constraintEnd_toStartOf="@+id/textView2"
                app:layout_constraintStart_toEndOf="@id/lbl_score"
                app:layout_constraintTop_toBottomOf="@id/movieSummary" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="4dp"
                android:text="@string/txt_movie_reviews"
                android:textColor="@color/colorSecondary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieSummary" />

            <TextView
                android:id="@+id/movieScore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="4dp"
                android:gravity="center"
                android:textColor="@color/colorTextPrimary"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lbl_score" />

            <TextView
                android:id="@+id/movieReviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_margin="4dp"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView2" />

            <TextView
                android:id="@+id/moviePopularity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorTextPrimary"
                android:textSize="18sp"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
               app:layout_constraintTop_toBottomOf="@+id/lbl_boxoffice" />

            <TextView
                android:id="@+id/lblDirecter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="@dimen/view_margin"
                android:layout_marginEnd="5dp"
                android:text="@string/lbl_director"
                android:textColor="@color/colorSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movieScore" />

            <TextView
                android:id="@+id/movieDirector"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginTop="14dp"
                android:layout_toEndOf="@id/lblDirecter"
                android:ellipsize="end"
                android:lines="2"
                app:layout_constraintEnd_toEndOf="parent"
                android:paddingStart="@dimen/view_margin"
                android:singleLine="false"
                android:textColor="@color/colorTextPrimary"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/lblDirecter"
                app:layout_constraintTop_toBottomOf="@id/moviePopularity" />

            <TextView
                android:id="@+id/lblWriter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieDirector"
                android:layout_marginTop="@dimen/view_margin"
                android:layout_marginEnd="5dp"
                android:text="@string/lbl_writer"
                android:textColor="@color/colorSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblDirecter" />

            <TextView
                android:id="@+id/movieWriter"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieDirector"
                android:layout_marginStart="5dp"
                android:paddingEnd="2dp"
                android:layout_toEndOf="@id/lblWriter"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                android:singleLine="false"
                android:textColor="@color/colorTextPrimary"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/lblDirecter"
                app:layout_constraintTop_toBottomOf="@id/movieDirector" />


            <TextView
                android:id="@+id/lblCast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieWriter"
                android:layout_marginTop="@dimen/view_margin"
                android:layout_marginEnd="5dp"
                android:text="@string/movie_details_cast"
                android:textColor="@color/colorSecondary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lblWriter" />

            <TextView
                android:id="@+id/movieCast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/movieWriter"
                android:layout_marginStart="5dp"
                android:layout_marginTop="@dimen/view_margin"
                android:layout_toEndOf="@id/lblCast"
                android:ellipsize="end"
                android:minLines="2"
                android:paddingEnd="2dp"
                android:paddingStart="@dimen/view_margin"
                app:layout_constraintEnd_toEndOf="parent"
                android:singleLine="false"
                android:textColor="@color/colorTextPrimary"
                android:textSize="15sp"
                app:layout_constraintStart_toEndOf="@id/lblWriter"
                app:layout_constraintTop_toBottomOf="@id/movieWriter" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
